toolkit/themes/shared/aboutReader.css
/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this file,
 * You can obtain one at http://mozilla.org/MPL/2.0/. */

/* Avoid adding ID selector rules in this style sheet, since they could
 * inadvertently match elements in the article content. */
:root {
  --body-padding: 64px;
  --popup-border: rgba(0, 0, 0, 0.12);
  --opaque-popup-border: #e0e0e0;
  --popup-shadow: rgba(49, 49, 49, 0.3);
  --grey-90-a10: rgba(12, 12, 13, 0.1);
  --grey-90-a20: rgba(12, 12, 13, 0.2);
  --grey-90-a30: rgba(12, 12, 13, 0.3);
  --grey-90-a80: rgba(12, 12, 13, 0.8);
  --grey-30: #d7d7db;
  --blue-40: #45a1ff;
  --blue-40-a30: rgba(69, 161, 255, 0.3);
  --blue-60: #0060df;
  --active-color: #0B83FF;
  --font-size: 12;
  --content-width: 22em;
  --line-height: 1.6em;
  --tooltip-background: var(--grey-90-a80);
  --tooltip-foreground: white;
  --toolbar-button-hover: var(--grey-90-a10);
  --toolbar-button-active: var(--grey-90-a20);
}

body {
  --main-background: #fff;
  --main-foreground: #333;
  --toolbar-border: var(--grey-90-a20);
  --toolbar-box-shadow: var(--grey-90-a10);
  --popup-button-hover: hsla(0,0%,70%,.4);
  --popup-button-active: hsla(240,5%,5%,.15);
  --popup-bgcolor: white;
  --popup-button: #edecf0;
  --selected-fonttype-background: var(--blue-40-a30);
  --selected-border: var(--blue-40);
  --popup-line: var(--grey-30);
  --font-value-border: var(--grey-30);
  --font-color: #000000;
  --icon-fill: #3b3b3c;
  --icon-disabled-fill: #8080807F;
  /* light colours */
}

body.sepia {
  --main-background: #f4ecd8;
  --main-foreground: #5b4636;
  --toolbar-border: #5b4636;
}

body.dark {
  --main-background: #333;
  --main-foreground: #eee;
  --toolbar-border: #4a4a4b;
  --toolbar-box-shadow: black;
  --toolbar-button-hover: var(--grey-90-a30);
  --toolbar-button-active: var(--grey-90-a80);
  --popup-button-active: hsla(0,0%,70%,.6);
  --popup-bgcolor: #4c4a50;
  --popup-button: #5c5c61;
  --popup-line: #5c5c61;
  --opaque-popup-border: #434146;
  --font-value-border: #656468;
  --font-color: #fff;
  --icon-fill: #fff;
  --icon-disabled-fill: #ffffff66;
  --tooltip-background: black;
  --tooltip-foreground: white;
  /* dark colours */
}

body {
  margin: 0;
  padding: var(--body-padding);
  background-color: var(--main-background);
  color: var(--main-foreground);
}

body.loaded {
  transition: color 0.4s, background-color 0.4s;
}

body.dark *::-moz-selection {
  background-color: #FFFFFF;
  color: #0095DD;
}
body.dark a::-moz-selection {
  color: #DD4800;
}

body.sans-serif,
body.sans-serif .remove-button {
  font-family: Helvetica, Arial, sans-serif;
}

body.serif,
body.serif .remove-button {
  font-family: Georgia, "Times New Roman", serif;
}

.container {
  margin: 0 auto;
  font-size: var(--font-size);
  max-width: var(--content-width);
  line-height: var(--line-height);
}

/* Override some controls and content styles based on color scheme */

body.light > .container > .header > .domain {
  border-bottom-color: #333333 !important;
}

body.sepia > .container > .header > .domain {
  border-bottom-color: #5b4636 !important;
}

body.dark > .container > .header > .domain {
  border-bottom-color: #eeeeee !important;
}

body.sepia > .container > .footer {
  background-color: #dedad4 !important;
}

body.light blockquote {
  border-inline-start: 2px solid #333333 !important;
}

body.sepia blockquote {
  border-inline-start: 2px solid #5b4636 !important;
}

body.dark blockquote {
  border-inline-start: 2px solid #eeeeee !important;
}

.light-button {
  color: #333333;
  background-color: #ffffff;
}

.dark-button {
  color: #eeeeee;
  background-color: #333333;
}

.sepia-button {
  color: #5b4636;
  background-color: #f4ecd8;
}

/* Loading/error message */

.reader-message {
  margin-top: 40px;
  display: none;
  text-align: center;
  width: 100%;
  font-size: 0.9em;
}

/* Detector element to see if we're at the top of the doc or not. */
.top-anchor {
  position: absolute;
  top: 0;
  width: 0;
  height: 5px;
  pointer-events: none;
}

/* Header */

.header {
  text-align: start;
  display: none;
}

.domain {
  font-size: 0.9em;
  line-height: 1.48em;
  padding-bottom: 4px;
  font-family: Helvetica, Arial, sans-serif;
  text-decoration: none;
  border-bottom: 1px solid;
  color: #0095dd;
}

.header > h1 {
  font-size: 1.6em;
  line-height: 1.25em;
  width: 100%;
  margin: 30px 0;
  padding: 0;
}

.header > .credits {
  font-size: 0.9em;
  line-height: 1.48em;
  margin: 0 0 10px;
  padding: 0;
  font-style: italic;
}

.header > .meta-data {
  font-size: 0.65em;
  margin: 0 0 15px;
}

.reader-estimated-time {
  text-align: match-parent;
}

/*======= Controls toolbar =======*/

.toolbar-container {
  position: sticky;
  z-index: 2;
  top: 32px;
  height: 0; /* take up no space, so body is at the top. */

  /* As a stick container, we're positioned relative to the body. Move us to
   * the edge of the viewport using margins, and take the width of
   * the body padding into account for calculating our width.
   */
  margin-inline-start: calc(-1 * var(--body-padding));
  width: max(var(--body-padding), calc((100% - var(--content-width)) / 2 + var(--body-padding)));
  font-size: var(--font-size); /* Needed to ensure `em` units match, is reset for .reader-controls */
}
/* ... */

